@@ -55,3 +55,8 @@ US_desertB,PLANET,cat_hab1,10,-2,0,,,,,0.1,1,2,130,220,240 220 230,255 255 255,,
 US_desertC,PLANET,cat_hab1,10,-2,0,,,,,0.1,1,2,130,220,240 220 230,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 US_red,PLANET,cat_hab1,10,1,3,,,,,0,,,90,150,240 220 230,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 US_redWind,PLANET,cat_hab1,10,1,3,,,,,0,,,90,150,240 220 230,255 255 255,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+#Required but not used,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+US_artificial,PLANET,cat_barren,0,-100,100,,,,,0.05,1,1,90,150,220 220 220,255 255 255,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,,,
+US_magnetic,PLANET,cat_hab3,0,-1,1,,,,,0.1,1,2,80,200,200 230 240,255 255 255,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,,,
+US_storm,PLANET,cat_hab2,0,-2,0,,,,,0.1,1,2,100,200,240 220 230,255 255 255,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,,,
