@@ -2,7 +2,6 @@ package data.scripts;
 
 import com.fs.starfarer.api.Global;
 import com.fs.starfarer.api.campaign.PlanetAPI;
-import com.fs.starfarer.api.campaign.PlanetSpecAPI;
 import com.fs.starfarer.api.campaign.econ.MarketAPI;
 import com.fs.starfarer.api.campaign.econ.MarketConditionAPI;
 import com.fs.starfarer.api.impl.campaign.ids.Factions;
@@ -10,10 +9,8 @@ import com.fs.starfarer.api.ui.Alignment;
 import com.fs.starfarer.api.ui.TooltipMakerAPI;
 import com.fs.starfarer.api.util.Misc;
 import com.fs.starfarer.api.util.WeightedRandomPicker;
-import com.fs.starfarer.loading.specs.PlanetSpec;
 
 import java.awt.*;
-import java.util.*;
 import java.util.List;
 
 public class US_utils {
@@ -22,10 +19,8 @@ public class US_utils {
     ---- TEXT UTILS ----
     ------------------*/
 
-    private static final String category = "unknownSkies";
-
     public static String txt(String id) {
-        return Global.getSettings().getString(category, id);
+        return Global.getSettings().getString("unknownSkies", id);
     }
 
     /*----------------------
@@ -84,33 +79,6 @@ public class US_utils {
         if (doIt) {
             p.getMarket().removeCondition(toRemove);
         }
-    }
-
-    public static void changePlanetType(PlanetAPI planet, String newType) {
-        PlanetSpecAPI planetSpec = planet.getSpec();
-        for (final PlanetSpecAPI spec : Global.getSettings().getAllPlanetSpecs()) {
-            if (spec.getPlanetType().equals(newType)) {
-                planetSpec.setAtmosphereColor(spec.getAtmosphereColor());
-                planetSpec.setAtmosphereThickness(spec.getAtmosphereThickness());
-                planetSpec.setAtmosphereThicknessMin(spec.getAtmosphereThicknessMin());
-                planetSpec.setCloudColor(spec.getCloudColor());
-                planetSpec.setCloudRotation(spec.getCloudRotation());
-                planetSpec.setCloudTexture(spec.getCloudTexture());
-                planetSpec.setGlowColor(spec.getGlowColor());
-                planetSpec.setGlowTexture(spec.getGlowTexture());
-                planetSpec.setIconColor(spec.getIconColor());
-                planetSpec.setPlanetColor(spec.getPlanetColor());
-                planetSpec.setStarscapeIcon(spec.getStarscapeIcon());
-                planetSpec.setTexture(spec.getTexture());
-                planetSpec.setUseReverseLightForGlow(spec.isUseReverseLightForGlow());
-                ((PlanetSpec) planetSpec).planetType = newType;
-                ((PlanetSpec) planetSpec).name = spec.getName();
-                ((PlanetSpec) planetSpec).descriptionId = ((PlanetSpec) spec).descriptionId;
-                break;
-            }
-        }
-        planet.setTypeId(newType);
-        planet.applySpecChanges();
     }
 
     /*-----------------------
